syntax = "proto3";

option  go_package = "../protobuf";
option java_multiple_files = true;
option java_package = "io.grpc.examples.protobuf";
option java_outer_classname = "ProtobufProto";

//import "google/protobuf/any.proto";
package protobuf;


service WSServer {
    // 发送消息
    rpc SendMsg (SendMsgReq) returns (SendMsgRsp) {
    }
    // 强制断开连接
    rpc ForceDisconnect (ForceDisconnectReq) returns (ForceDisconnectRsp) {
    }
}

// 发送消息
message SendMsgReq {
    string clientid = 1; //
    int64 protocol_id = 2; // protocol_id
    int32 body_type = 3; //
    int32 queue = 4; //
    int32 broadcast = 5; //全局广播
    //google.protobuf.Any body = 6; //
    string body = 6;
}

message SendMsgRsp {
    uint32 errcode = 1;
    string errMsg = 2;
}

message ForceDisconnectReq {
    string clientid = 1;
}

message ForceDisconnectRsp {
    uint32 errcode = 1;
    string errMsg = 2;
}
